add form field scss + icons + footer 50%

--- a/assets/scss/system/helpers/_icons.scss
+++ b/assets/scss/system/helpers/_icons.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "fontello";
-  src: url("../../../cat/fonts/icons/fontello.eot?37838140");
-  src: url("../../../cat/fonts/icons/fontello.eot?37838140#iefix")
+  src: url("~/public/fonts/icons/fontello.eot?37838140");
+  src: url("~/public/fonts/icons/fontello.eot?37838140#iefix")
       format("embedded-opentype"),
-    url("../../../cat/fonts/icons/fontello.woff2?37838140") format("woff2"),
-    url("../../../cat/fonts/icons/fontello.woff?37838140") format("woff"),
-    url("../../../cat/fonts/icons/fontello.ttf?37838140") format("truetype"),
-    url("../../../cat/fonts/icons/fontello.svg?37838140#fontello") format("svg");
+    url("~/public/fonts/icons/fontello.woff2?37838140") format("woff2"),
+    url("~/public/fonts/icons/fontello.woff?37838140") format("woff"),
+    url("~/public/fonts/icons/fontello.ttf?37838140") format("truetype"),
+    url("~/public/fonts/icons/fontello.svg?37838140#fontello") format("svg");
   font-weight: normal;
   font-style: normal;
 }
