--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,3 +5,5 @@
 // system common and helpers
 @use "./system/common/_common-index.scss";
 @use "./system/helpers/_helpers-index.scss";
+// component
+@use "./system//components/form/form.scss"
