title postion + promobar block

--- a/assets/scss/system/helpers/_helper-classes.scss
+++ b/assets/scss/system/helpers/_helper-classes.scss
@@ -12,6 +12,12 @@
 .tac {
     text-align: center;
 }
+.tal {
+    text-align: left;
+}
+.tar {
+    text-align: right;
+}
 .no-margins {
     margin: 0;
 }
