--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,4 +6,4 @@
 @use "./system/common/_common-index.scss";
 @use "./system/helpers/_helpers-index.scss";
 // component
-@use "./system//components/form/form.scss"
+@use "./system//components/form/form.scss";
