cards services + custom grid

--- a/assets/scss/system/components/cards/card-component.scss
+++ b/assets/scss/system/components/cards/card-component.scss
@@ -231,7 +231,7 @@ $sizes: "sm", "xs", "md", "lg", "xl";
             gap: var(--card-gap-md);
         }
     }
-    .card-footer {
+    .card-additionl-btns {
         justify-content: flex-end;
         display: flex;
         gap: var(--actions-inner-gap-md);
