--- a/assets/scss/system/helpers/_helper-classes.scss
+++ b/assets/scss/system/helpers/_helper-classes.scss
@@ -5,6 +5,10 @@
     display: flex;
     justify-content: space-between;
 }
+.jcc {
+    display: flex;
+    justify-content: center;
+}
 .aic {
     display: flex;
     align-items: center;
