--- a/assets/scss/system/helpers/_container.scss
+++ b/assets/scss/system/helpers/_container.scss
@@ -4,7 +4,7 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 var(--container-padding);
-  height: 100%;
+  height: fit-content;
 }
 .container {
   @include container-base;
