--- a/assets/scss/system/helpers/_animations.scss
+++ b/assets/scss/system/helpers/_animations.scss
@@ -1,20 +1,47 @@
 .headline {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .masked-wrp {
-	overflow: hidden;
-	aspect-ratio: 1;
-	width: 800px;
-	margin-bottom: 20px;
+    overflow: hidden;
+    aspect-ratio: 1;
+    width: 800px;
+    margin-bottom: 20px;
 
-	img {
-		width: 100%;
-		height: 100%;
-	}
+    img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 #banner-action-on-scroll,
 #banner-action-on-scroll-reverse {
-	margin: 0 auto;
+    margin: 0 auto;
+}
+@keyframes slideIn {
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes slideOut {
+    from {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    to {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+}
+
+.slideInRight-enter-active {
+    animation: slideIn 0.5s ease forwards;
+}
+.slideInRight-leave-active {
+    animation: slideOut 0.5s ease forwards;
 }
