--- a/assets/scss/system/helpers/_icons.scss
+++ b/assets/scss/system/helpers/_icons.scss
@@ -1,14 +1,15 @@
 @font-face {
-  font-family: "fontello";
-  src: url("~/public/fonts/icons/fontello.eot?37838140");
-  src: url("~/public/fonts/icons/fontello.eot?37838140#iefix")
-      format("embedded-opentype"),
-    url("~/public/fonts/icons/fontello.woff2?37838140") format("woff2"),
-    url("~/public/fonts/icons/fontello.woff?37838140") format("woff"),
-    url("~/public/fonts/icons/fontello.ttf?37838140") format("truetype"),
-    url("~/public/fonts/icons/fontello.svg?37838140#fontello") format("svg");
-  font-weight: normal;
-  font-style: normal;
+    font-family: "fontello";
+    src: url("~/public/fonts/icons/fontello.eot?37838140");
+    src:
+        url("~/public/fonts/icons/fontello.eot?37838140#iefix")
+            format("embedded-opentype"),
+        url("~/public/fonts/icons/fontello.woff2?37838140") format("woff2"),
+        url("~/public/fonts/icons/fontello.woff?37838140") format("woff"),
+        url("~/public/fonts/icons/fontello.ttf?37838140") format("truetype"),
+        url("~/public/fonts/icons/fontello.svg?37838140#fontello") format("svg");
+    font-weight: normal;
+    font-style: normal;
 }
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
@@ -22,290 +23,287 @@
   */
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "fontello";
-  font-style: normal;
-  font-weight: normal;
-  speak: never;
-  display: inline-block;
-  text-decoration: inherit;
-  font-variant: normal;
-  text-transform: none;
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1;
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+    speak: never;
+    display: inline-block;
+    text-decoration: inherit;
+    font-variant: normal;
+    text-transform: none;
+    /* fix buttons height, for twitter bootstrap */
+    line-height: 1;
+    /* Font smoothing. That was taken from TWBS */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+    /* Uncomment for 3D effect */
+    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 .icon-share:before {
-  content: "\e800";
+    content: "\e800";
 } /* '' */
 .icon-share-2:before {
-  content: "\e801";
+    content: "\e801";
 } /* '' */
 .icon-telegram:before {
-  content: "\e802";
+    content: "\e802";
 } /* '' */
 .icon-tiktok:before {
-  content: "\e803";
+    content: "\e803";
 } /* '' */
 .icon-tiktok-simple:before {
-  content: "\e804";
+    content: "\e804";
 } /* '' */
 .icon-top-bottom:before {
-  content: "\e805";
+    content: "\e805";
 } /* '' */
 .icon-twitter:before {
-  content: "\e806";
+    content: "\e806";
 } /* '' */
 .icon-twitter-simple:before {
-  content: "\e807";
+    content: "\e807";
 } /* '' */
 .icon-upload:before {
-  content: "\e808";
+    content: "\e808";
 } /* '' */
 .icon-user:before {
-  content: "\e809";
+    content: "\e809";
 } /* '' */
 .icon-user-2:before {
-  content: "\e80a";
+    content: "\e80a";
 } /* '' */
 .icon-user-3-fill:before {
-  content: "\e80b";
+    content: "\e80b";
 } /* '' */
 .icon-user-circle:before {
-  content: "\e80c";
+    content: "\e80c";
 } /* '' */
 .icon-user-circle-light:before {
-  content: "\e80d";
+    content: "\e80d";
 } /* '' */
 .icon-user-line:before {
-  content: "\e80e";
+    content: "\e80e";
 } /* '' */
 .icon-viber:before {
-  content: "\e80f";
+    content: "\e80f";
 } /* '' */
 .icon-whatsapp:before {
-  content: "\e810";
+    content: "\e810";
 } /* '' */
 .icon-x:before {
-  content: "\e811";
+    content: "\e811";
 } /* '' */
 .icon-x-2:before {
-  content: "\e812";
+    content: "\e812";
 } /* '' */
 .icon-arrow-narrow-right:before {
-  content: "\e813";
+    content: "\e813";
 } /* '' */
 .icon-youtube-simple:before {
-  content: "\e814";
+    content: "\e814";
 } /* '' */
 .icon-alert-triangle:before {
-  content: "\e815";
+    content: "\e815";
 } /* '' */
 .icon-arrow-narrow-left:before {
-  content: "\e816";
+    content: "\e816";
 } /* '' */
 .icon-arrow-narrow-up:before {
-  content: "\e817";
+    content: "\e817";
 } /* '' */
 .icon-attachment-line:before {
-  content: "\e818";
+    content: "\e818";
 } /* '' */
 .icon-arrow-narrow-down:before {
-  content: "\e819";
+    content: "\e819";
 } /* '' */
 .icon-chat-2:before {
-  content: "\e81a";
+    content: "\e81a";
 } /* '' */
 .icon-chat-1:before {
-  content: "\e81b";
+    content: "\e81b";
 } /* '' */
 .icon-check-large:before {
-  content: "\e81c";
+    content: "\e81c";
 } /* '' */
 .icon-check:before {
-  content: "\e81d";
+    content: "\e81d";
 } /* '' */
 .icon-check-line:before {
-  content: "\e81e";
+    content: "\e81e";
 } /* '' */
 .icon-chevron-down:before {
-  content: "\e81f";
+    content: "\e81f";
 } /* '' */
 .icon-chevron-down-3:before {
-  content: "\e820";
+    content: "\e820";
 } /* '' */
 .icon-chevron-down-small:before {
-  content: "\e821";
+    content: "\e821";
 } /* '' */
 .icon-chevron-down-2:before {
-  content: "\e822";
+    content: "\e822";
 } /* '' */
 .icon-chevron-left-2:before {
-  content: "\e823";
+    content: "\e823";
 } /* '' */
 .icon-chevron-left:before {
-  content: "\e824";
+    content: "\e824";
 } /* '' */
 .icon-chevron-down-small-2:before {
-  content: "\e825";
+    content: "\e825";
 } /* '' */
 .icon-chevron-left-small:before {
-  content: "\e826";
+    content: "\e826";
 } /* '' */
 .icon-chevron-left-3:before {
-  content: "\e827";
+    content: "\e827";
 } /* '' */
 .icon-chevron-left-small-2:before {
-  content: "\e828";
+    content: "\e828";
 } /* '' */
 .icon-chevron-right:before {
-  content: "\e829";
+    content: "\e829";
 } /* '' */
 .icon-chevron-right-3:before {
-  content: "\e82a";
+    content: "\e82a";
 } /* '' */
 .icon-chevron-up:before {
-  content: "\e82b";
+    content: "\e82b";
 } /* '' */
 .icon-chevron-right-2:before {
-  content: "\e82c";
+    content: "\e82c";
 } /* '' */
 .icon-chevron-right-small:before {
-  content: "\e82d";
+    content: "\e82d";
 } /* '' */
 .icon-chevron-right-small-2:before {
-  content: "\e82e";
+    content: "\e82e";
 } /* '' */
 .icon-chevron-up-2:before {
-  content: "\e82f";
+    content: "\e82f";
 } /* '' */
 .icon-chevron-up-small:before {
-  content: "\e830";
+    content: "\e830";
 } /* '' */
 .icon-chevron-up-small-2:before {
-  content: "\e831";
+    content: "\e831";
 } /* '' */
 .icon-circle:before {
-  content: "\e832";
+    content: "\e832";
 } /* '' */
 .icon-chevron-up-3:before {
-  content: "\e833";
+    content: "\e833";
 } /* '' */
 .icon-close-circle-fill:before {
-  content: "\e834";
+    content: "\e834";
 } /* '' */
 .icon-circle-check:before {
-  content: "\e835";
+    content: "\e835";
 } /* '' */
 .icon-download:before {
-  content: "\e836";
+    content: "\e836";
 } /* '' */
 .icon-drop-up:before {
-  content: "\e837";
+    content: "\e837";
 } /* '' */
 .icon-drop-down:before {
-  content: "\e838";
+    content: "\e838";
 } /* '' */
 .icon-eye-close-line:before {
-  content: "\e839";
+    content: "\e839";
 } /* '' */
 .icon-error-warning-line:before {
-  content: "\e83a";
+    content: "\e83a";
 } /* '' */
 .icon-fb-groups-1:before {
-  content: "\e83b";
+    content: "\e83b";
 } /* '' */
 .icon-eye-line:before {
-  content: "\e83c";
+    content: "\e83c";
 } /* '' */
 .icon-file-download-light:before {
-  content: "\e83d";
+    content: "\e83d";
 } /* '' */
 .icon-insragram:before {
-  content: "\e83e";
+    content: "\e83e";
 } /* '' */
 .icon-folder:before {
-  content: "\e83f";
+    content: "\e83f";
 } /* '' */
 .icon-home:before {
-  content: "\e840";
+    content: "\e840";
 } /* '' */
 .icon-lang:before {
-  content: "\e841";
+    content: "\e841";
 } /* '' */
 .icon-file-download:before {
-  content: "\e842";
+    content: "\e842";
 } /* '' */
 .icon-linkedin-simple:before {
-  content: "\e843";
+    content: "\e843";
 } /* '' */
 .icon-link:before {
-  content: "\e844";
+    content: "\e844";
 } /* '' */
-.icon-linkedin:before {
-  content: "\e845";
-} /* '' */
 .icon-facebook:before {
-  content: "\e846";
+    content: "\e846";
 } /* '' */
 .icon-list:before {
-  content: "\e847";
+    content: "\e847";
 } /* '' */
 .icon-insragram-light:before {
-  content: "\e848";
+    content: "\e848";
 } /* '' */
 .icon-mail-line:before {
-  content: "\e849";
+    content: "\e849";
 } /* '' */
 .icon-facebook-circle:before {
-  content: "\e84a";
+    content: "\e84a";
 } /* '' */
 .icon-menu-1:before {
-  content: "\e84b";
+    content: "\e84b";
 } /* '' */
 .icon-file-check:before {
-  content: "\e84c";
+    content: "\e84c";
 } /* '' */
 .icon-list-2:before {
-  content: "\e84d";
+    content: "\e84d";
 } /* '' */
 .icon-messanger:before {
-  content: "\e84e";
+    content: "\e84e";
 } /* '' */
 .icon-minus:before {
-  content: "\e84f";
+    content: "\e84f";
 } /* '' */
 .icon-messanger-simple:before {
-  content: "\e850";
+    content: "\e850";
 } /* '' */
 .icon-menu:before {
-  content: "\e851";
+    content: "\e851";
 } /* '' */
 .icon-phone:before {
-  content: "\e852";
+    content: "\e852";
 } /* '' */
 .icon-plus:before {
-  content: "\e853";
+    content: "\e853";
 } /* '' */
-.icon--play-filled:before {
-  content: "\e854";
+.icon-play-filled:before {
+    content: "\e854";
 } /* '' */
 .icon-pin:before {
-  content: "\e855";
+    content: "\e855";
 } /* '' */
 .icon-search:before {
-  content: "\e856";
+    content: "\e856";
 } /* '' */
 .icon-search-2:before {
-  content: "\e857";
+    content: "\e857";
 } /* '' */
 .icon-home-2:before {
-  content: "\e858";
+    content: "\e858";
 } /* '' */
 .icon-check-c:before {
-  content: "\e859";
+    content: "\e859";
 } /* '' */
