--- a/assets/scss/system/components/cards/card-component.scss
+++ b/assets/scss/system/components/cards/card-component.scss
@@ -271,6 +271,7 @@ $sizes: "sm", "xs", "md", "lg", "xl";
     }
     &.reverse {
         flex-direction: column-reverse;
+        justify-content: space-between;
     }
     .card-image {
         display: flex;
