--- a/assets/scss/system/helpers/_animations.scss
+++ b/assets/scss/system/helpers/_animations.scss
@@ -71,3 +71,15 @@
 .slideInLeft-leave-active {
     animation: slideOutL 0.5s ease forwards;
 }
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity 0.5s ease;
+}
+.fade-enter-from,
+.fade-leave-to {
+    opacity: 0;
+}
+.fade-enter-to,
+.fade-leave-from {
+    opacity: 1;
+}
