--- a/assets/scss/system/helpers/_global.scss
+++ b/assets/scss/system/helpers/_global.scss
@@ -135,4 +135,7 @@ scrollbar-thumb {
 .swiper-slide {
     display: flex !important;
     height: auto !important;
+    .card{
+        width: 100%;
+    }
 }
