--- a/assets/scss/system/common/_section-separators.scss
+++ b/assets/scss/system/common/_section-separators.scss
@@ -9,6 +9,7 @@
         height: 100px;
         position: absolute;
         top: -100px;
+        transition: .3s;
     }
     @include bp-768{
         height: 40px;
