--- a/assets/scss/system/helpers/_animations.scss
+++ b/assets/scss/system/helpers/_animations.scss
@@ -74,6 +74,7 @@
 .fade-enter-active,
 .fade-leave-active {
     transition: opacity 0.5s ease;
+    transition-delay: .5s;
 }
 .fade-enter-from,
 .fade-leave-to {
