--- a/assets/scss/system/common/_section-separators.scss
+++ b/assets/scss/system/common/_section-separators.scss
@@ -9,11 +9,11 @@
         height: 100px;
         position: absolute;
         top: -100px;
-        transition: .3s;
-    }
-    @include bp-768{
-        height: 40px;
-        top: -40px;
+        transition: 0.3s;
+        @include bp-768 {
+            height: 40px;
+            top: -40px;
+        }
     }
 }
 .section-separator-BOTTOM {
@@ -26,9 +26,10 @@
         height: 100px;
         position: absolute;
         bottom: -100px;
-    }
-    @include bp-768{
-        height: 40px;
-        bottom: -40px;
+        transition: 0.3s;
+        @include bp-768 {
+            height: 40px;
+            bottom: -40px;
+        }
     }
 }
